
2005/08/22: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- no longer define gct-tool as experimental (disables warning)
- GWEN_Time_fromString now accepts constructs like "*D.*M.YYYY" (i.e.
  day and month may consist of multiple digits. This is needed to support
  old AqMoney1's export format)


2005-08-19   Christian Stimming <stimming@tuhh.de>

	* configure.ac, plugins/crypttoken/ohbci/ohbci.xml.in: Add version
	string OHBCI_VERSION_STRING for the xml plugin file.


===========================================================================
MARK: released gwenhywfar-1.16.0 (2005/08/19)
===========================================================================


2005/08/18: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed some bugs in crypttoken (especially in OpenHBCI crypttoken)


2005-08-18   Christian Stimming <stimming@tuhh.de>

	* src/crypt2/crypttoken.c (GWEN_CryptManager_GetPluginDescrs): Fix
	returning an accidentally free'd object -- this error caused the
	aqhbci-qt-wizard to crash.


2005/08/17: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- GWEN_DBIO now finally uses the plugin mechanism
- removed functions 
  - GWEN_DBIO_Find 
  - GWEN_DBIO_GetPluginPath
  - GWEN_DBIO_GetLibLoader
  - GWEN_DBIO_SetLibLoader
  - GWEN_DBIO_Register
  - GWEN_DBIO_LoadPluginFile
  - GWEN_DBIO_LoadPlugin
  Normally these changes should lead to an increased major version number,
  but until now only AqBanking uses GWEN_DBIOs so we just increment the minor
  version number and hope to get away with it (which we will if nobody else
  is using GWEN_DBIOs. Most of the removed functions were used internally
  only, anyway)
- added functions 
  - GWEN_PluginManager_InsertPath()
  - GWEN_PluginManager_RemovePath()
  - GWEN_Directory_FindFileInPaths()
  - GWEN_DB_RemoveCharValue()
  - GWEN_PathManager_AddPath()
  - GWEN_PathManager_InsertPath()