@@ -1,4 +1,14 @@
 
+2005/08/23: Martin Preuss<martin@libchipcard.de>
+-------------------------------------------------
+- added functions
+  - GWEN_DB_VariableRename()
+  - GWEN_DB_GetCharValueFromNode()
+  - GWEN_DB_SetCharValueInNode()
+  - GWEN_DB_GetIntValueFromNode()
+  - GWEN_DB_GetBinValueFromNode()
+
+
 2005/08/22: Martin Preuss<martin@libchipcard.de>
 -------------------------------------------------
 - no longer define gct-tool as experimental (disables warning)
